--- a/degerler.html
+++ b/degerler.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -27,17 +28,17 @@
         <ul class="navbar-nav ms-auto">
           <!-- Anasayfa -->
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Anasayfa</a>
+            <a class="nav-link" href="index">Anasayfa</a>
           </li>
 
           <!-- Kurumsal -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Kurumsal</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="anlayis.html">Eğitim Anlayışımız</a></li>
-              <li><a class="dropdown-item" href="misyon.html">Misyon & Vizyon</a></li>
-              <li><a class="dropdown-item" href="tarihce.html">Tarihçe</a></li>
-              <li><a class="dropdown-item" href="kultur.html">Okul Kültürü</a></li>
+              <li><a class="dropdown-item" href="anlayis">Eğitim Anlayışımız</a></li>
+              <li><a class="dropdown-item" href="misyon">Misyon & Vizyon</a></li>
+              <li><a class="dropdown-item" href="tarihce">Tarihçe</a></li>
+              <li><a class="dropdown-item" href="kultur">Okul Kültürü</a></li>
             </ul>
           </li>
 
@@ -45,10 +46,10 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Eğitim Programları</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="manevi.html">Manevi Eğitim</a></li>
-              <li><a class="dropdown-item active" href="degerler.html">Değerler Eğitimi</a></li>
-              <li><a class="dropdown-item" href="yabancidil.html">Yabancı Dil</a></li>
-              <li><a class="dropdown-item" href="rehberlik.html">Rehberlik</a></li>
+              <li><a class="dropdown-item" href="manevi">Manevi Eğitim</a></li>
+              <li><a class="dropdown-item active" href="degerler">Değerler Eğitimi</a></li>
+              <li><a class="dropdown-item" href="yabancidil">Yabancı Dil</a></li>
+              <li><a class="dropdown-item" href="rehberlik">Rehberlik</a></li>
             </ul>
           </li>
 
@@ -56,11 +57,11 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Atölyeler</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="robotik.html">Robotik Kodlama</a></li>
-              <li><a class="dropdown-item" href="gorsel.html">Görsel Sanatlar ve Ahşap</a></li>
-              <li><a class="dropdown-item" href="mutfak.html">Mutfak Atölyesi</a></li>
-              <li><a class="dropdown-item" href="tasavvuf.html">Tasavvuf Müziği</a></li>
-              <li><a class="dropdown-item" href="kozmik.html">Montessori Kozmik</a></li>
+              <li><a class="dropdown-item" href="robotik">Robotik Kodlama</a></li>
+              <li><a class="dropdown-item" href="gorsel">Görsel Sanatlar ve Ahşap</a></li>
+              <li><a class="dropdown-item" href="mutfak">Mutfak Atölyesi</a></li>
+              <li><a class="dropdown-item" href="tasavvuf">Tasavvuf Müziği</a></li>
+              <li><a class="dropdown-item" href="kozmik">Montessori Kozmik</a></li>
             </ul>
           </li>
 
@@ -68,15 +69,15 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Etkinlikler</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="oyun.html">Oyun ve Fiziki Etkinlikler</a></li>
-              <li><a class="dropdown-item" href="kulupler.html">Kulüpler ve P4C</a></li>
-              <li><a class="dropdown-item" href="sosyalyardim.html">Sosyal Yardım Projeleri</a></li>
-              <li><a class="dropdown-item" href="helal-ve-saglikli.html">Helal ve Sağlıklı</a></li>
+              <li><a class="dropdown-item" href="oyun">Oyun ve Fiziki Etkinlikler</a></li>
+              <li><a class="dropdown-item" href="kulupler">Kulüpler ve P4C</a></li>
+              <li><a class="dropdown-item" href="sosyalyardim">Sosyal Yardım Projeleri</a></li>
+              <li><a class="dropdown-item" href="helal-ve-saglikli">Helal ve Sağlıklı</a></li>
             </ul>
           </li>
-           <li class="nav-item"><a class="nav-link"  href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
-          <li class="nav-item"><a class="nav-link " href="galeri.html">Galeri</a></li>
-          <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
+           <li class="nav-item"><a class="nav-link"  href="ogretmen-kadromuz">Öğretmen Kadromuz</a></li>
+          <li class="nav-item"><a class="nav-link " href="galeri">Galeri</a></li>
+          <li class="nav-item"><a class="nav-link" href="iletisim">İletişim</a></li>
         </ul>
       </div>
     </div>
@@ -84,23 +85,23 @@
 </header>
 
 <!-- HERO -->
-<section class="hero-section">
+<section class="hero-section" data-aos="fade">
   <div class="container">
-    <h1>Değerler Eğitimi</h1>
-    <p>Montessori destekli yaklaşımımızla özgüvenli, erdemli, üretken ve değerlerine sahip çıkan bireyler yetiştiriyoruz.</p>
+    <h1 data-aos="fade-up">Değerler Eğitimi</h1>
+    <p data-aos="fade-up" data-aos-delay="100">Yaklaşımımızla özgüvenli, erdemli, üretken ve değerlerine sahip çıkan bireyler yetiştiriyoruz.</p>
   </div>
 </section>
 
 <!-- DEĞERLER EĞİTİMİ SECTION -->
-<section class="values-education py-5 bg-light">
+<section class="values-education py-5 bg-light" data-aos="fade-up">
   <div class="container">
-    <div class="section-header text-center mb-5">
+    <div class="section-header text-center mb-5" data-aos="fade-up">
       <h2 class="display-4 fw-bold">Değerler Eğitimi</h2>
       <p class="lead text-muted">Erdemli bireyler yetiştirmek için değerler eğitimi</p>
       <div class="divider mx-auto bg-primary"></div>
     </div>
     <div class="row g-4 mb-5">
-      <div class="col-lg-12">
+      <div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
         <div class="values-intro p-4 p-lg-5 bg-white rounded-4 shadow-sm">
           <h3 class="mb-4">Değerler Eğitimi Nedir?</h3>
           <p>18 Mart Sirac Koleji olarak, öğrencilerimize akademik bilginin yanı sıra ahlaki değerler ve erdemler kazandırmayı hedefliyoruz. Değerler eğitimi, öğrencilerimizin dürüstlük, adalet, saygı, sorumluluk gibi evrensel değerleri içselleştirmelerini sağlar. Bu eğitim, onların sadece başarılı bireyler değil, aynı zamanda topluma faydalı, erdemli insanlar olmalarını destekler.</p>
@@ -108,7 +109,7 @@
         </div>
       </div>
     </div>
-    <div class="section-header text-center mb-5">
+    <div class="section-header text-center mb-5" data-aos="fade-up">
       <h2 class="display-4 fw-bold">Ölçme ve Değerlendirme Sistemimiz</h2>
       <p class="lead text-muted">Bireysel gelişimi merkeze alan modern değerlendirme yöntemleri</p>
       <div class="divider mx-auto bg-primary"></div>
@@ -123,7 +124,7 @@
 
     <div class="row g-4">
       <!-- A- Etüt Çalışmaları -->
-      <div class="col-lg-6">
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
         <div class="assessment-card p-4 p-lg-5 rounded-4 shadow-sm h-100">
           <div class="assessment-header d-flex align-items-center mb-4">
             <div class="assessment-number bg-primary">A</div>
@@ -148,7 +149,7 @@ Bireysel öğrenmeye daha çok ihtiyacı olan öğrencilerimizi tespit edip, onl
       </div>
 
       <!-- B- Portfolyo Çalışmaları -->
-      <div class="col-lg-6">
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
         <div class="assessment-card p-4 p-lg-5 rounded-4 shadow-sm h-100">
           <div class="assessment-header d-flex align-items-center mb-4">
             <div class="assessment-number bg-success">B</div>
@@ -172,7 +173,7 @@ Bireysel öğrenmeye daha çok ihtiyacı olan öğrencilerimizi tespit edip, onl
       </div>
 
       <!-- C- Ödevlendirme -->
-      <div class="col-lg-6">
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
         <div class="assessment-card p-4 p-lg-5 rounded-4 shadow-sm h-100">
           <div class="assessment-header d-flex align-items-center mb-4">
             <div class="assessment-number bg-warning">C</div>
@@ -195,7 +196,7 @@ Bireysel öğrenmeye daha çok ihtiyacı olan öğrencilerimizi tespit edip, onl
       </div>
 
       <!-- D- Kazanım Tarama ve Dijital Sistem -->
-      <div class="col-lg-6">
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
         <div class="assessment-card p-4 p-lg-5 rounded-4 shadow-sm h-100">
           <div class="assessment-header d-flex align-items-center mb-4">
             <div class="assessment-number bg-info">D-E</div>
@@ -471,11 +472,11 @@ Bireysel öğrenmeye daha çok ihtiyacı olan öğrencilerimizi tespit edip, onl
       <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
         <h5 class="footer-title">Hızlı Linkler</h5>
         <ul class="footer-links list-unstyled">
-          <li><a href="index.html">Anasayfa</a></li>
-          <li><a href="tarihce.html">Kurumsal</a></li>
-          <li><a href="galeri.html">Galeri</a></li>
-          <li><a href="iletisim.html">İletişim</a></li>
-          <li><a href="rehberlik.html">Rehberlik</a></li>
+          <li><a href="index">Anasayfa</a></li>
+          <li><a href="tarihce">Kurumsal</a></li>
+          <li><a href="galeri">Galeri</a></li>
+          <li><a href="iletisim">İletişim</a></li>
+          <li><a href="rehberlik">Rehberlik</a></li>
         </ul>
       </div>
       
@@ -498,5 +499,14 @@ Bireysel öğrenmeye daha çok ihtiyacı olan öğrencilerimizi tespit edip, onl
 </footer>
 <script src="../js/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  // Initialize AOS animation
+  AOS.init({
+    duration: 800,
+    easing: 'ease-in-out',
+    once: true
+  });
+</script>
 </body>
 </html>
