--- a/gorsel.html
+++ b/gorsel.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" href="../image/siraj logo.jpg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -27,17 +28,17 @@
         <ul class="navbar-nav ms-auto">
           <!-- Anasayfa -->
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Anasayfa</a>
+            <a class="nav-link" href="index">Anasayfa</a>
           </li>
 
           <!-- Kurumsal -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Kurumsal</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="anlayis.html">Eğitim Anlayışımız</a></li>
-              <li><a class="dropdown-item" href="misyon.html">Misyon & Vizyon</a></li>
-              <li><a class="dropdown-item" href="tarihce.html">Tarihçe</a></li>
-              <li><a class="dropdown-item" href="kultur.html">Okul Kültürü</a></li>
+              <li><a class="dropdown-item" href="anlayis">Eğitim Anlayışımız</a></li>
+              <li><a class="dropdown-item" href="misyon">Misyon & Vizyon</a></li>
+              <li><a class="dropdown-item" href="tarihce">Tarihçe</a></li>
+              <li><a class="dropdown-item" href="kultur">Okul Kültürü</a></li>
             </ul>
           </li>
 
@@ -45,10 +46,10 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Eğitim Programları</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="manevi.html">Manevi Eğitim</a></li>
-              <li><a class="dropdown-item" href="degerler.html">Değerler Eğitimi</a></li>
-              <li><a class="dropdown-item" href="yabancidil.html">Yabancı Dil</a></li>
-              <li><a class="dropdown-item" href="rehberlik.html">Rehberlik</a></li>
+              <li><a class="dropdown-item" href="manevi">Manevi Eğitim</a></li>
+              <li><a class="dropdown-item" href="degerler">Değerler Eğitimi</a></li>
+              <li><a class="dropdown-item" href="yabancidil">Yabancı Dil</a></li>
+              <li><a class="dropdown-item" href="rehberlik">Rehberlik</a></li>
             </ul>
           </li>
 
@@ -56,11 +57,11 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Atölyeler</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="robotik.html">Robotik Kodlama</a></li>
-              <li><a class="dropdown-item active" href="gorsel.html">Görsel Sanatlar ve Ahşap</a></li>
-              <li><a class="dropdown-item" href="mutfak.html">Mutfak Atölyesi</a></li>
-              <li><a class="dropdown-item" href="tasavvuf.html">Tasavvuf Müziği</a></li>
-              <li><a class="dropdown-item" href="kozmik.html">Montessori Kozmik</a></li>
+              <li><a class="dropdown-item" href="robotik">Robotik Kodlama</a></li>
+              <li><a class="dropdown-item active" href="gorsel">Görsel Sanatlar ve Ahşap</a></li>
+              <li><a class="dropdown-item" href="mutfak">Mutfak Atölyesi</a></li>
+              <li><a class="dropdown-item" href="tasavvuf">Tasavvuf Müziği</a></li>
+              <li><a class="dropdown-item" href="kozmik">Montessori Kozmik</a></li>
             </ul>
           </li>
 
@@ -68,15 +69,15 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Etkinlikler</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="oyun.html">Oyun ve Fiziki Etkinlikler</a></li>
-              <li><a class="dropdown-item" href="kulupler.html">Kulüpler ve P4C</a></li>
-              <li><a class="dropdown-item" href="sosyalyardim.html">Sosyal Yardım Projeleri</a></li>
-              <li><a class="dropdown-item" href="helal-ve-saglikli.html">Helal ve Sağlıklı</a></li>
+              <li><a class="dropdown-item" href="oyun">Oyun ve Fiziki Etkinlikler</a></li>
+              <li><a class="dropdown-item" href="kulupler">Kulüpler ve P4C</a></li>
+              <li><a class="dropdown-item" href="sosyalyardim">Sosyal Yardım Projeleri</a></li>
+              <li><a class="dropdown-item" href="helal-ve-saglikli">Helal ve Sağlıklı</a></li>
             </ul>
           </li>
-           <li class="nav-item"><a class="nav-link"  href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
-          <li class="nav-item"><a class="nav-link " href="galeri.html">Galeri</a></li>
-          <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
+           <li class="nav-item"><a class="nav-link"  href="ogretmen-kadromuz">Öğretmen Kadromuz</a></li>
+          <li class="nav-item"><a class="nav-link " href="galeri">Galeri</a></li>
+          <li class="nav-item"><a class="nav-link" href="iletisim">İletişim</a></li>
         </ul>
       </div>
     </div>
@@ -84,20 +85,20 @@
 </header>
 
 <!-- HERO -->
-<section class="hero-section">
+<section class="hero-section" data-aos="fade">
   <div class="container">
-    <h1>Görsel Sanatlar ve Ahşap Atölyesi</h1>
-    <p>Hayal gücünü renklere dönüştürüyoruz, Sanatla büyü, üretimle geliş.</p>
+    <h1 data-aos="fade-up">Görsel Sanatlar ve Ahşap Atölyesi</h1>
+    <p data-aos="fade-up" data-aos-delay="100">Hayal gücünü renklere dönüştürüyoruz, Sanatla büyü, üretimle geliş.</p>
   </div>
 </section>
 <!-- gorsel ve ahşap atölyesi -->
- <section id="workshop" class="workshop-section">
-  <div class="container" data-aos="fade-up">
-    <div class="section-title">
+ <section id="workshop" class="workshop-section" data-aos="fade-up">
+  <div class="container">
+    <div class="section-title" data-aos="fade-up">
       <h2>Görsel Sanatlar ve <span class="highlight-wood">Ahşap Atölyesi</span></h2>
     </div>
     <div class="row content">
-      <div class="col-lg-6">
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
         <p>
           Atölyemizde yapılan çalışmalar, öğrencilerimizin yaratıcılığını teşvik ederken üretkenliklerini pekiştirmekte; estetik algılarının gelişmesine katkı sağlamaktadır. Aynı zamanda düşüncelerini özgürce ifade etmelerine imkân tanır.
         </p>
@@ -109,7 +110,7 @@
           “Ahşapla şekillenen hayaller, kalıcı eserlerle buluşur.”
         </p>
       </div>
-      <div class="col-lg-6">
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
         <div class="image-grid">
           <img src="../image/görsel sanatlar ve ahşap/6.jpg" alt="Ahşap Atölyesi Çalışmaları" class="img-fluid rounded shadow">
           <img src="../image/görsel sanatlar ve ahşap/7.jpg" alt="Görsel Sanatlar Çalışmaları" class="img-fluid rounded shadow">
@@ -247,11 +248,11 @@
       <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
         <h5 class="footer-title">Hızlı Linkler</h5>
         <ul class="footer-links list-unstyled">
-          <li><a href="index.html">Anasayfa</a></li>
-          <li><a href="tarihce.html">Kurumsal</a></li>
-          <li><a href="galeri.html">Galeri</a></li>
-          <li><a href="iletisim.html">İletişim</a></li>
-          <li><a href="rehberlik.html">Rehberlik</a></li>
+          <li><a href="index">Anasayfa</a></li>
+          <li><a href="tarihce">Kurumsal</a></li>
+          <li><a href="galeri">Galeri</a></li>
+          <li><a href="iletisim">İletişim</a></li>
+          <li><a href="rehberlik">Rehberlik</a></li>
         </ul>
       </div>
       
@@ -274,5 +275,13 @@
 </footer>
 <script src="../js/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init({
+    duration: 800,
+    easing: 'ease-in-out',
+    once: true
+  });
+</script>
 </body>
 </html>
