Türkçe yazım düzeltmeleri yapıldı

--- a/galeri.html
+++ b/galeri.html
@@ -93,7 +93,7 @@
 <section class="gallery-header" data-aos="fade">
   <div class="container">
     <h2 data-aos="fade-up">Okul Galerimiz</h2>
-    <p data-aos="fade-up" data-aos-delay="100">Öğrencilerimizin eğitim yolculuğundan, etkinliklerimizden ve okul yaşantımızdan en güzel kareler.</p>
+    <p data-aos="fade-up" data-aos-delay="100">Öğrencilerimizin eğitim yolculuğundan, etkinliklerimizden ve okul yaşamımızdan en güzel kareler.</p>
     <div class="gallery-filter" data-aos="fade-up" data-aos-delay="200">
       <button class="filter-btn active" data-filter="all">Tümü</button>
       <button class="filter-btn" data-filter="etkinlik">Etkinlikler</button>
