--- a/gorsel.html
+++ b/gorsel.html
@@ -103,7 +103,7 @@
           Atölyemizde yapılan çalışmalar, öğrencilerimizin yaratıcılığını teşvik ederken üretkenliklerini pekiştirmekte; estetik algılarının gelişmesine katkı sağlamaktadır. Aynı zamanda düşüncelerini özgürce ifade etmelerine imkân tanır.
         </p>
         <p>
-          Görsel sanatlar atölyesi, çok yönlü etkinliklerle öğrencilerin bireysel yeteneklerini keşfetmelerine ve birlikte üretme becerilerini geliştirmelerine destek olmaktadır. Bu süreç, öğrencilerin hem el becerilerini hem de düşünsel kapasitelerini geliştirmeyi amaçlar.
+          Görsel sanatlar atölyesi, çok yönlü etkinliklerle öğrencilerin bireysel yeteneklerini keşfetmelerine ve birlikte üretme becerilerini geliştirmelerine destek olur. Bu süreç, öğrencilerin hem el becerilerini hem de düşünsel kapasitelerini geliştirmeyi amaçlar.
         </p>
         <p class="quote">
           “Yaratıcılık, her çocuğun içindeki cevheri ortaya çıkarmanın anahtarıdır.”<br>
