--- a/degerler.html
+++ b/degerler.html
@@ -104,15 +104,10 @@
       <div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
         <div class="values-intro p-4 p-lg-5 bg-white rounded-4 shadow-sm">
           <h3 class="mb-4">Değerler Eğitimi Nedir?</h3>
-          <p>18 Mart Sirac Koleji olarak, öğrencilerimize akademik bilginin yanı sıra ahlaki değerler ve erdemler kazandırmayı hedefliyoruz. Değerler eğitimi, öğrencilerimizin dürüstlük, adalet, saygı, sorumluluk gibi evrensel değerleri içselleştirmelerini sağlar. Bu eğitim, onların sadece başarılı bireyler değil, aynı zamanda topluma faydalı, erdemli insanlar olmalarını destekler.</p>
-          <p>Değerler eğitimi, derslerimizde ve günlük etkinliklerimizde entegre bir şekilde yer alır. Öğrencilerimiz, bu değerleri hikayeler, grup çalışmaları ve örnek olay incelemeleri yoluyla öğrenirler.</p>
+          <p>18 Mart Sirac Koleji olarak öğrencilerimize akademik bilginin yanı sıra ahlaki değerler ve erdemler kazandırmayı hedefliyoruz. Değerler eğitimi, öğrencilerimizin dürüstlük, adalet, saygı, sorumluluk gibi evrensel değerleri içselleştirmelerini sağlar. Bu eğitim, onların yalnızca başarılı bireyler değil, aynı zamanda topluma faydalı ve erdemli insanlar olmalarını destekler.</p>
+          <p>Değerler eğitimi, derslerimizde ve günlük etkinliklerimizde entegre bir şekilde yer alır. Öğrencilerimiz bu değerleri hikayeler, grup çalışmaları ve örnek olay incelemeleri yoluyla öğrenir.</p>
         </div>
       </div>
-    </div>
-    <div class="section-header text-center mb-5" data-aos="fade-up">
-      <h2 class="display-4 fw-bold">Ölçme ve Değerlendirme Sistemimiz</h2>
-      <p class="lead text-muted">Bireysel gelişimi merkeze alan modern değerlendirme yöntemleri</p>
-      <div class="divider mx-auto bg-primary"></div>
     </div>
 <section class="assessment-system py-5 bg-light" style="display: none;"></section>
   <div class="container">
